kubernetes/reddit/ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ui.dev
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
              service:
                name: ui
                port:
                  number: 9292
